# win_auto_tiny

./: README.md  pyproject.toml
tests/: test_dpi_utils.py  test_keyboard.py  test_mouse.py  test_process.py  test_win32_draw.py  test_window_utils.py
win_auto_tiny/: __init__.py  dpi_utils.py  keyboard.py  mouse.py  process.py  win32_draw.py  window_utils.py
